google-k8s-ingress/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.6.0
    component: "default-backend"
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-default-backend
  namespace: tools
spec:
  clusterIP: ""
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nginx-ingress
    component: "default-backend"
    release: nginx-ingress
  type: "ClusterIP"
