google-k8s-ingress/ingress-resources.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: fuchicorp-ingress
    namespace: tools 
  spec:
    rules:
    - host: grafana.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: grafana-service
            servicePort: 8080
    - host: jenkins.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: jenkins-service
            servicePort: 8081
    - host: jira.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: jira-service
            servicePort: 8082
    - host: docker.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: nexus-service
            servicePort: 8085
    - host: nexus.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: nexus-service
            servicePort: 8083
    - host: vault.fuchicorp.com
      http:
        paths:
        - backend:
            serviceName: vault-service
            servicePort: 8084
